--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
 		rgba(var(--gray), 33%);
 }
 @font-face {
-	font-family: "Atkinson";
+	font-family: "Jetbrains Mono";
 	src: url("/fonts/atkinson-regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
