--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,19 +35,20 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
+	background: #0e176c;
 	background-size: 100% 600px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
-	color: rgb(var(--gray-dark));
+	color: #e3e3e3;
 	font-size: 20px;
 	line-height: 1.7;
 }
 main {
+	background: transparent;
 	width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
-	padding: 3em 1em;
+	padding: 2em 1em;
 }
 h1,
 h2,
@@ -61,9 +62,11 @@ h6 {
 }
 h1 {
 	font-size: 3.052em;
+	color: #ff4507;
 }
 h2 {
 	font-size: 2.441em;
+	color: #fd6532;
 }
 h3 {
 	font-size: 1.953em;
@@ -152,4 +155,15 @@ hr {
 	clip-path: inset(50%);
 	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
+}
+
+.map-container {
+	overflow: hidden;
+	width: 100%;
+}
+
+.map {
+	width: 100%;
+	height: auto;
+	display: block;
 }
