--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,11 +11,12 @@ import Layout from '../layouts/Layout.astro';
 
         <h2>games</h2>
         <ul>
-            <li><a href="
+            <li><a href="https://github.com/froppii/shiba1">kei</a> - a game about driving and loading up a kei truck while driving in the countryside. (WIP)</li>
         </ul>
 
         <h2>websites</h2>
         <ul>
             <li><a href="https://froppii.dev">froppii.dev</a> - my personal website (you're here!) built with astro.</li>
+            <li><a href="https://github.com/froppii/ascii-dungeon">dsciied</a> - a d20 roller in ascii which explodes magic whenever you roll it</li>
         </ul>
     </main>
