--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import StopIndicator from "../components/StopIndicator.astro"
-import Window from "../components/Window.astro"
 import Footer from "../components/Footer.astro"
+import Center from "../components/Center.astro"
 import "../styles/global.css";
+
 interface Props {
     title: string;
     description?: string;
@@ -20,31 +20,16 @@ const { title, description, ogImage } = Astro.props;
         <title>froppii - {title}</title>
         <link rel="stylesheet" href="/styles/global.css" />
     </head>
+
     <body>
-        <StopIndicator
-  			stops={["/", "/about", "/projects", "/blog", "/contact"]}
-			links={["/", "/about", "/projects", "/blog", "/contact"]}
-  			current={Astro.url.pathname}
-		/>
-        <Window title="map.png" startTop={150} startLeft={29} width="230px">
-            <div class="map-container">
-                <img src="/map.png" usemap="#stations" class="map" />   
-            </div>
-            <map name="stations">
-				<area shape="circle" coords="60,45,20" href="/" alt="home" />
-				<area shape="circle" coords="60,110,20" href="/about" alt="about" />
-				<area shape="circle" coords="60,180,20" href="/projects" alt="projects" />
-				<area shape="circle" coords="105,250,20" href="/board" alt="board" />
-				<area shape="circle" coords="105,280,20" href="/blog" alt="blog" />
-				<area shape="circle" coords="105,360,20" href="/contact" alt="contact" />
-				<area shape="circle" coords="145,195,20" href="/friends" alt="friends" />
-				<area shape="circle" coords="30,250,20" href="/buttons" alt="buttons" />
-				<area shape="circle" coords="10,315,20" href="/photos" alt="photos" />
-			</map>
-		</Window>
-        <slot />
-        <Footer />
+        <Center>
+            <slot name="header" />
+
+            <main class="main-content">
+                <slot />
+            </main>
+
+            <Footer />
+        </Center>
     </body>
 </html>
-
-
