added new fonts, header, layour + blog cards

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,9 +42,9 @@ const today = new Date();
 <style>
 	footer {
 		padding: 1em;
-		background: #0e176c;
 		color: rgb(var(--gray));
 		text-align: center;
+		font-family: 'Jetbrains Mono';
 	}
 	.social-links {
 		display: flex;
