--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,25 +11,29 @@ const { left, center, right } = Astro.props;
 		<slot name="center" />
 	</div>
 
-	<div class="header-box">
+	<!--<div class="header-box">
 		<slot name="right" />
-	</div>
+	</div> -->
 </div>
 
 <style>
 	:host {
         display: block;
+		max-width: 720px;
         width: 100%;
-        height: 100%;
+		margin: 0 auto;
+		box-sizing: border-box;
     }
 
 	.header-row {
 		display: grid;
 		grid-template-columns: 26% 54% 20%;
 		gap: 1rem;
-		height: 120px;
-		margin-bottom: 0.75rem;
+		height: 110px;
+		margin-bottom: 1px;
+		width: 100%;
 		margin-top: 1rem;
+		box-sizing: border-box;
 		align-items: stretch;
 	}
 
@@ -39,7 +43,7 @@ const { left, center, right } = Astro.props;
 		min-width: 0;
 		height: 100%;
 		display: flex;
-		align-items: center;
+		align-items: stretch;
 	}
 
 	body.dark .header-box {
