--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,108 +1,52 @@
 ---
 import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
-import BaseHead from '../../components/BaseHead.astro';
-import Footer from '../../components/Footer.astro';
-import FormattedDate from '../../components/FormattedDate.astro';
 import StopIndicator from '../../components/StopIndicator.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
+import StopSign from '../../components/StopSign.astro';
+import HeaderRow from '../../components/Header.astro';
+import FormattedDate from '../../components/FormattedDate.astro';
+import Layout from '../../layouts/Layout.astro';
+import BlogPost from '../../layouts/BlogPost.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
+
+const stops = [
+  { path: "/", title: "1st Avenue Station", logo: "/logos/home.svg" },
+  { path: "/about", title: "Local 2 St Station", logo: "/logos/about.svg" },
+  { path: "/projects", title: "Works Boulevard Station", logo: "/logos/projects.svg" },
+  { path: "/blog", title: "Journal Road Station", logo: "/logos/blog.svg" },
+  { path: "/contact", title: "Exchange Avenue", logo: "/logos/contact.svg" }
+];
+
+const currentPath = Astro.url.pathname;
+const currentStop = stops.find(s => currentPath.startsWith(s.path)) ?? stops[3];
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			main {
-				width: 960px;
-			}
-			ul {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
+<Layout title="blog">
+  <HeaderRow slot="header">
+    <div slot="left">
+      <StopSign title={currentStop.title} logo={currentStop.logo} />
+    </div>
 
-			ul li img {
-				margin-bottom: 0.5rem;
-				border-radius: 12px;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<StopIndicator
-  			stops={["/", "/about", "/projects", "/blog", "/contact"]}
-			links={["/", "/about", "/projects", "/blog", "/contact"]}
-  			current={Astro.url.pathname}
-		/>
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.id}/`}>
-									{post.data.heroImage && (
-										<Image width={720} height={360} src={post.data.heroImage} alt="" />
-									)}
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
-	</body>
-</html>
+    <StopIndicator
+      slot="center"
+      stops={stops.map(s => s.path)}
+      links={stops.map(s => s.path)}
+      current={currentPath}
+    />
+
+    <div slot="right">
+      <span>v1.0</span>
+    </div>
+  </HeaderRow>
+
+  <main>
+    <section>
+      {posts.map(post => (
+        <BlogPost post={post} />
+      ))}
+    </section>
+  </main>
+</Layout>
