--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,11 +18,20 @@
 }
 @font-face {
 	font-family: "Jetbrains Mono";
-	src: url("/fonts/atkinson-regular.woff") format("woff");
+	src: url("/fonts/JetBrainsMono-Regular.ttf") format("truetype");
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
+
+@font-face {
+	font-family: "Jetbrains Mono";
+	src: url("/fonts/JetBrainsMono-BoldItalic.ttf") format("truetype");
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
 @font-face {
 	font-family: "Atkinson";
 	src: url("/fonts/atkinson-bold.woff") format("woff");
@@ -30,26 +39,95 @@
 	font-style: normal;
 	font-display: swap;
 }
+
 body {
-	font-family: "Atkinson", sans-serif;
+	font-family: Courier New, monospace;
 	margin: 0;
+	position: relative;
 	padding: 0;
 	text-align: left;
-	background: #0e176c;
-	background-size: 100% 600px;
+	background: #171f69;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: #e3e3e3;
 	font-size: 20px;
 	line-height: 1.7;
 }
-main {
-	background: transparent;
-	width: 720px;
-	max-width: calc(100% - 2em);
-	margin: auto;
-	padding: 2em 1em;
+
+body::before {
+	content: "";
+  	position: fixed;
+  	inset: 0;
+  	pointer-events: none;
+  	z-index: 0;
+
+  	background-image:
+    	repeating-radial-gradient(
+      		circle at 0 0,
+      		rgba(255,255,255,0.06),
+      		rgba(255,255,255,0.03) 3px,
+      		transparent 3px,
+      		transparent 5px
+    	);
+
+  	opacity: 0.2;
+  	animation: paper-noise 6s steps(6) infinite;
 }
+
+body::after {
+  	content: "";
+  	position: fixed;
+  	inset: 0;
+  	pointer-events: none;
+  	z-index: 1;
+	  	box-shadow: inset 0 0 120px rgba(0,0,0,0.35), inset 0 0 260px rgba(0,0,0,0.25);
+  	background:
+    	linear-gradient(
+      		to bottom,
+      		rgba(0,0,0,0.18),
+      		transparent 80px
+    	),
+    	linear-gradient(
+      		to top,
+      		rgba(0,0,0,0.15),
+      		transparent 90px
+    	),
+    	linear-gradient(
+      		to right,
+      		rgba(0,0,0,0.12),
+      		transparent 60px
+    	),
+    	linear-gradient(
+      		to left,
+      		rgba(0,0,0,0.12),
+      		transparent 60px
+    );
+
+  mix-blend-mode: multiply;
+  opacity: 0.5;
+}
+
+
+@keyframes paper-noise {
+  	0%   { transform: translate(0, 0); }
+  	25%  { transform: translate(-0.5px, 0.5px); }
+  	50%  { transform: translate(0.5px, -0.5px); }
+  	75%  { transform: translate(-0.5px, -0.5px); }
+  	100% { transform: translate(0, 0); }
+}
+
+main {
+	width: 100%;
+	margin: 0;
+	padding: 2em 0 0 0;
+	box-sizing: border-box;
+}
+
+main, header, footer {
+	position: relative;
+	z-index: 2;
+}
+
 h1,
 h2,
 h3,
@@ -61,7 +139,9 @@ h6 {
 	line-height: 1.2;
 }
 h1 {
-	font-size: 3.052em;
+	font-family: Courier New, monospace;
+	font-weight: 700;
+	font-size: 46px;
 	color: #ff4507;
 }
 h2 {
@@ -88,6 +168,8 @@ a:hover {
 	color: var(--accent);
 }
 p {
+	font-family: 'Jetbrains Mono';
+	font-size: 16px;
 	margin-bottom: 1em;
 }
 .prose p {
@@ -106,16 +188,13 @@ table {
 img {
 	max-width: 100%;
 	height: auto;
-	border-radius: 8px;
 }
 code {
 	padding: 2px 5px;
 	background-color: rgb(var(--gray-light));
-	border-radius: 2px;
 }
 pre {
 	padding: 1.5em;
-	border-radius: 8px;
 }
 pre > code {
 	all: unset;
@@ -157,6 +236,22 @@ hr {
 	white-space: nowrap;
 }
 
+.title-header {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	background: #c3c3c3;
+	box-sizing: border-box;
+}
+
+.title-header h1 {
+  font-family: Courier New, monospace;
+  font-weight: 700;
+  font-size: 46px;
+  color: #ff4507;
+  margin: 0;
+}
+
 .map-container {
 	overflow: hidden;
 	width: 100%;
@@ -171,5 +266,8 @@ hr {
 @media (max-width: 700px) {
 	.header-row {
 		grid-template-columns: 1fr;
+	}
+	.title-header h1 {
+		font-size: 32px;
 	}
 }
